<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity" >


    <TextView
        android:id="@+id/tvPeso"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/peso"
        android:padding="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/etPeso"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_peso"
        android:padding="16dp"
        android:inputType="numberDecimal"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvPeso"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvAltura"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/altura"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etPeso"/>

    <EditText
        android:id="@+id/etAltura"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/hint_altura"
        android:padding="16dp"
        android:inputType="numberDecimal"
        app:layout_constraintStart_toStartOf="@id/etPeso"
        app:layout_constraintBottom_toBottomOf="@id/tvAltura"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/tvIMC"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/imc"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAltura" />

</androidx.constraintlayout.widget.ConstraintLayout>